--- a/apps/expenses/src/styles.scss
+++ b/apps/expenses/src/styles.scss
@@ -1,1 +1,40 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+:root {
+  --color-yellow: #f9c74f;
+  --color-purple: #9d4edd;
+}
+
+* > * {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.bg-yellow {
+  background-color: var(--color-yellow);
+}
+
+.bg-purple {
+  background-color: var(--color-purple);
+}
+
+// .form-input {
+//   @extend mt-1
+//       block
+//       w-full
+//       py-2
+//       px-3
+//       border
+//       border-gray-200
+//       bg-white
+//       rounded-md
+//       focus:outline-none
+//       focus:ring-indigo-500
+//       sm:text-sm;
+// }
