--- a/libs/features/src/lib/list/list.component.html
+++ b/libs/features/src/lib/list/list.component.html
@@ -1,1 +1,12 @@
-<p>list works!</p>
+<div class="flex flex-col py-6 gap-3">
+  <h1 class="py-4 font-bold text-xl">History</h1>
+  <ng-container *ngIf="items$ | async; else fetching">
+    <nx-transaction
+      *ngFor="let item of items$ | async; index as i"
+      [transaction]="item"
+    ></nx-transaction>
+  </ng-container>
+  <ng-template #fetching>
+    <div>Fetching....</div>
+  </ng-template>
+</div>
