--- a/libs/features/src/lib/expenses-graph/expenses-graph.component.html
+++ b/libs/features/src/lib/expenses-graph/expenses-graph.component.html
@@ -1,1 +1,25 @@
-<p>expenses-graph works!</p>
+<div class="flex justify-content max-w-xs mx-auto">
+  <div class="item">
+    <div class="chart relative">
+      <ng-container *ngIf="labels; else fetching">
+        <canvas
+          baseChart
+          [data]="dataInfo.data"
+          [type]="doughnutChartType"
+          [options]="dataInfo?.options"
+        >
+        </canvas>
+      </ng-container>
+      <ng-template #fetching>
+        <div>Fetching....</div>
+      </ng-template>
+      <h3 class="mb-4 font-bold title">
+        Total
+        <span class="block text-3xl text-emerald-400">
+          {{ total | currency: 'USD':'symbol':'1.0-0' }}
+        </span>
+      </h3>
+    </div>
+    <div class="flex flex-col gap-4"></div>
+  </div>
+</div>
