--- a/libs/features/src/lib/list/list.component.html
+++ b/libs/features/src/lib/list/list.component.html
@@ -1,9 +1,9 @@
 <div class="flex flex-col py-6 gap-3">
   <h1 class="py-4 font-bold text-xl">History</h1>
-  <ng-container *ngIf="items$ | async; else fetching">
+  <ng-container *ngIf="labels; else fetching">
     <nx-transaction
-      *ngFor="let item of items$ | async; trackBy: trackBy"
-      [transaction]="item"
+      *ngFor="let label of labels; trackBy: trackBy"
+      [transaction]="label"
     ></nx-transaction>
   </ng-container>
   <ng-template #fetching>
