Now showing labels under pie chart.

--- a/libs/features/src/lib/expenses-graph/expenses-graph.component.html
+++ b/libs/features/src/lib/expenses-graph/expenses-graph.component.html
@@ -20,6 +20,8 @@
         </span>
       </h3>
     </div>
-    <div class="flex flex-col gap-4"></div>
+    <div class="flex flex-col gap-4">
+      <nx-labels [labels]="labels"></nx-labels>
+    </div>
   </div>
 </div>
