Moved helper service to services folder. Also fixed color on trashcans.

--- a/libs/features/src/lib/transaction/transaction.component.html
+++ b/libs/features/src/lib/transaction/transaction.component.html
@@ -7,8 +7,8 @@
       #icon
       name="trash"
       (click)="remove()"
-      [color]="color"
-      [data-id]="transaction._id"
+      [attr.color]="color"
+      [attr.data-id]="transaction._id"
     >
     </box-icon>
   </button>
