--- a/libs/features/src/lib/expenses-graph/expenses-graph.component.html
+++ b/libs/features/src/lib/expenses-graph/expenses-graph.component.html
@@ -1,4 +1,7 @@
-<div class="flex justify-content max-w-xs mx-auto">
+<div
+  data-testid="expenses-graph-container"
+  class="flex justify-content max-w-xs mx-auto"
+>
   <div class="item">
     <div class="chart relative">
       <ng-container *ngIf="labels; else fetching">
