--- a/libs/features/src/lib/expenses/expenses.component.html
+++ b/libs/features/src/lib/expenses/expenses.component.html
@@ -2,7 +2,10 @@
   <div
     class="container mx-auto max-w-6xl text-center drop-shadow-lg text-gray-800"
   >
-    <h1 class="text-4xl py-8 mb-10 bg-slate-800 text-white rounded">
+    <h1
+      data-testid="expenses-title"
+      class="text-4xl py-8 mb-10 bg-slate-800 text-white rounded"
+    >
       Expense Tracker
     </h1>
     <div class="grid md:grid-cols-2 gap-4">
